--- a/12-hover/index.html
+++ b/12-hover/index.html
@@ -14,13 +14,13 @@
                 <div class="container-card-img">
                     <img src="./img/im1.jpg" alt="Loki">
                 </div>
-                <div class="container-content">
-                    <div class="container-content-box">
+                <div class="container-card-content">
+                    <div class="container-card-content-box">
                         <h3>
                             Loki <br> <span>Personaje Famoso</span>
                         </h3>
 
-                        <ul class="container-content-sci">
+                        <ul class="container-card-content-box-sci">
                             <li style="--i:1">
                                 <a href="#">
                                     <i class="">
@@ -51,13 +51,13 @@
                 <div class="container-card-img">
                     <img src="./img/im2.jpg" alt="Thor">
                 </div>
-                <div class="container-content">
-                    <div class="container-content-box">
+                <div class="container-card-content">
+                    <div class="container-card-content-box">
                         <h3>
                             Thor <br> <span>Personaje Famoso</span>
                         </h3>
 
-                        <ul class="container-content-sci">
+                        <ul class="container-card-content-box-sci">
                             <li style="--i:1">
                                 <a href="#">
                                     <i class="">
@@ -88,13 +88,13 @@
                 <div class="container-card-img">
                     <img src="./img/im3.jpg" alt="Iron-Man">
                 </div>
-                <div class="container-content">
-                    <div class="container-content-box">
+                <div class="container-card-content">
+                    <div class="container-card-content-box">
                         <h3>
                             Iron-Man <br> <span>Personaje Famoso</span>
                         </h3>
 
-                        <ul class="container-content-sci">
+                        <ul class="container-card-content-box-sci">
                             <li style="--i:1">
                                 <a href="#">
                                     <i class="">
