--- a/13-login-1/index.html
+++ b/13-login-1/index.html
@@ -22,7 +22,7 @@
                 <div class="form">
                     <h2> Login Form </h2>
                     <form action="">
-                        <div class="inpubox">
+                        <div class="inputbox">
                             <input type="text" name="" placeholder="User name">
                         </div>
                         <div class="inputbox">
@@ -32,7 +32,7 @@
                             <input type="submit" value="Login">
                         </div>
                         <p class="olvidar">Olvidaste tu contraseña? <a href="#">Click aqui</a></p>
-                        <p class="olvidar">No tengo una cuenta <a href="#">Crear</a></p>
+                        <p class="crear">No tengo una cuenta <a href="#">Crear</a></p>
                     </form>
                 </div>
             </div>
