--- a/15-nikepage/index.html
+++ b/15-nikepage/index.html
@@ -27,11 +27,11 @@
                 <a href="#">Details</a>
             </div>
         </div>
-
+        
         <ul class="sci">
-            <li><ion-icon name="logo-facebook"></ion-icon></li>
-            <li><ion-icon name="logo-whatsapp"></ion-icon></li>
-            <li><ion-icon name="logo-instagram"></ion-icon></li>
+            <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>        
 
     </section>  
