--- a/18-hover-page/index.html
+++ b/18-hover-page/index.html
@@ -8,5 +8,67 @@
 </head>
 <body>
     
+    <section class="container">
+        <div class="serviceBox">
+            <div class="icon" style="--i:#4eb7ff;">
+                <ion-icon name="color-palette-outline"></ion-icon>
+            </div>
+            <div class="content">
+                <h2>Design</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum cupiditate enim obcaecati ducimus provident at similique eligendi hic, corrupti exercitationem quo reprehenderit natus dicta commodi veritatis deserunt ipsum? Ipsum, temporibus.</p>
+            </div>
+        </div>
+        
+        <div class="serviceBox">
+            <div class="icon" style="--i:#fd6494;">
+                <ion-icon name="game-controller-outline"></ion-icon>
+            </div>
+            <div class="content">
+                <h2>Video Games</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos voluptatum modi natus nihil quaerat, dolor ea suscipit corporis, nam molestiae doloremque aliquid quod. Similique dolores, quos eveniet fuga accusantium magnam!</p>
+            </div>
+        </div>
+        <div class="serviceBox">
+            <div class="icon" style="--i:#43f390;">
+                <ion-icon name="airplane-outline"></ion-icon>
+            </div>
+            <div class="content">
+                <h2>Travel</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi aut, nobis qui illum debitis cumque dolorem aliquam, nemo maxime voluptatibus nisi, libero esse omnis excepturi necessitatibus sequi consequuntur animi iste.</p>
+            </div>
+        </div>
+        <div class="serviceBox">
+            <div class="icon" style="--i:#ffb508;">
+                <ion-icon name="barbell-outline"></ion-icon>
+            </div>
+            <div class="content">
+                <h2>Excercise</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste reiciendis earum quas, quibusdam culpa asperiores maiores eveniet cupiditate officiis laborum minus minima sunt recusandae. Iste esse ducimus quas!</p>
+            </div>
+        </div>
+        <div class="serviceBox">
+            <div class="icon" style="--i:#37ba82;">
+                <ion-icon name="videocam-outline"></ion-icon>
+            </div>
+            <div class="content">
+                <h2>Video</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium aliquam iusto, laborum quasi eius rerum vitae, cum quod ipsam maxime optio numquam quia necessitatibus libero deleniti magni accusamus, ducimus sunt.</p>
+            </div>
+        </div>
+        <div class="serviceBox">
+            <div class="icon" style="--i:#cd57ff;">
+                <ion-icon name="code-working-outline"></ion-icon>
+            </div>
+            <div class="content">
+                <h2>Developer</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium aliquam iusto, laborum quasi eius rerum vitae, cum quod ipsam maxime optio numquam quia necessitatibus libero deleniti magni accusamus, ducimus sunt.</p>
+            </div>
+        </div>
+
+    </section>
+
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
