finished hover page

--- a/18-hover-page/index.html
+++ b/18-hover-page/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
     <section class="container">
         <div class="serviceBox">
             <div class="icon" style="--i:#4eb7ff;">
@@ -15,17 +15,17 @@
             </div>
             <div class="content">
                 <h2>Design</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum cupiditate enim obcaecati ducimus provident at similique eligendi hic, corrupti exercitationem quo reprehenderit natus dicta commodi veritatis deserunt ipsum? Ipsum, temporibus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum cupiditate enim obcaecati ducimus provident at similique eligendi hic, corrupti exercitationem.</p>
             </div>
         </div>
-        
+
         <div class="serviceBox">
             <div class="icon" style="--i:#fd6494;">
                 <ion-icon name="game-controller-outline"></ion-icon>
             </div>
             <div class="content">
                 <h2>Video Games</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos voluptatum modi natus nihil quaerat, dolor ea suscipit corporis, nam molestiae doloremque aliquid quod. Similique dolores, quos eveniet fuga accusantium magnam!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos voluptatum modi natus nihil quaerat, dolor ea suscipit corporis, nam molestiae!</p>
             </div>
         </div>
         <div class="serviceBox">
@@ -34,7 +34,7 @@
             </div>
             <div class="content">
                 <h2>Travel</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi aut, nobis qui illum debitis cumque dolorem aliquam, nemo maxime voluptatibus nisi, libero esse omnis excepturi necessitatibus sequi consequuntur animi iste.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi aut, nobis qui illum debitis cumque dolorem aliquam, nemo maxime voluptatibus.</p>
             </div>
         </div>
         <div class="serviceBox">
@@ -43,7 +43,7 @@
             </div>
             <div class="content">
                 <h2>Excercise</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste reiciendis earum quas, quibusdam culpa asperiores maiores eveniet cupiditate officiis laborum minus minima sunt recusandae. Iste esse ducimus quas!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis fugiat iste reiciendis earum quas, quibusdam culpa asperiores maiores!</p>
             </div>
         </div>
         <div class="serviceBox">
@@ -52,7 +52,7 @@
             </div>
             <div class="content">
                 <h2>Video</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium aliquam iusto, laborum quasi eius rerum vitae, cum quod ipsam maxime optio numquam quia necessitatibus libero deleniti magni accusamus, ducimus sunt.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium aliquam iusto, laborum quasi eius rerum vitae, cum quod ipsam maxime.</p>
             </div>
         </div>
         <div class="serviceBox">
@@ -61,7 +61,7 @@
             </div>
             <div class="content">
                 <h2>Developer</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium aliquam iusto, laborum quasi eius rerum vitae, cum quod ipsam maxime optio numquam quia necessitatibus libero deleniti magni accusamus, ducimus sunt.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium aliquam iusto, laborum quasi eius rerum vitae, cum quod ipsam maxime.</p>
             </div>
         </div>
 
