--- a/19-card-deplazamiento/index.html
+++ b/19-card-deplazamiento/index.html
@@ -9,46 +9,35 @@
 <body>
     <section class="container">
         <div class="card">
-            <div class="card-sub">
-                <div class="card-title">
-                    <h1>Card 1</h1>
-                </div>
-                <div class="card-p">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vel enim, commodi saepe sunt reiciendis ratione perspiciatis magnam, sequi debitis blanditiis, repellat quis id voluptatem corporis dignissimos assumenda quasi libero.</p>
-                </div>
-                <div class="button">
-                    <button>Leer más</button>
+            <div class="box">
+                <div class="content">
+                    <h2>01</h2>
+                    <h3>Card One</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nemo itaque incidunt consectetur est sunt voluptatem quod. Ad ipsam, nisi repudiandae adipisci eligendi eaque impedit id laborum, iure perspiciatis in!</p>
+                    <a href="#">Leer más</a>
                 </div>
             </div>
-        </div>
-
+        </div>    
         <div class="card">
-            <div class="card-sub">
-                <div class="card-title">
-                    <h1>Card 2</h1>
-                </div>
-                <div class="card-p">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil facere expedita incidunt eum cupiditate, cumque quaerat eius quae atque, quidem rerum magni, illo reprehenderit maxime.</p>
-                </div>
-                <div class="button">
-                    <button>Leer más</button>
+            <div class="box">
+                <div class="content">
+                    <h2>02</h2>
+                    <h3>Card One</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et explicabo magnam natus voluptas dolore. Natus ducimus rerum nobis, ab eaque et libero vero quis ut reiciendis, a, temporibus quo? Soluta!</p>
+                    <a href="#">Leer más</a>
                 </div>
             </div>
-        </div>
-
+        </div>    
         <div class="card">
-            <div class="card-sub">
-                <div class="card-title">
-                    <h1>Card 3</h1>
-                </div>
-                <div class="card-p">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam suscipit eius placeat dolore unde deleniti quam? Praesentium, amet, veritatis atque deserunt culpa dolor et, error voluptas nulla explicabo laudantium animi!</p>
-                </div>
-                <div class="button">
-                    <button>Leer más</button>
+            <div class="box">
+                <div class="content">
+                    <h2>03</h2>
+                    <h3>Card One</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti facere ad ut quos commodi pariatur, quaerat corporis, consectetur vel autem odio ipsa libero nulla iusto blanditiis officiis tenetur doloribus cupiditate?</p>
+                    <a href="#">Leer más</a>
                 </div>
             </div>
-        </div>
+        </div>    
     </section>
     
 </body>
