--- a/25-skate-card/index.html
+++ b/25-skate-card/index.html
@@ -25,6 +25,7 @@
                     <li>Nariz 6.875"</li>
                     <li>Cola 6.25"</li>
                 </ul>
+                <button>Comprar</button>
             </div>
 
 
